crates/flowlog-build/tests/errors/stratifier/recursion_outside_loop.dl
.decl Edge(x: int32, y: int32)
.decl Reach(x: int32, y: int32)
.input Edge(IO="file", filename="Edge.csv", delimiter=",")
.output Reach
Reach(x, y) :- Edge(x, y).
Reach(x, z) :- Edge(x, y), Reach(y, z).
